<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="22dp">

    <View android:layout_width="40dp" android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_sheet_handle" />

    <TextView style="@style/SheetSubtitle" android:text="@string/sort_title" />

    <LinearLayout android:id="@+id/sort_date_desc" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_date_desc" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sort_date_asc" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_date_asc" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sort_title_asc" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_title_asc" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sort_title_desc" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_title_desc" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sort_color" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_color" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sort_manual" style="@style/SheetSortRow">
        <TextView style="@style/MenuTextStyle" android:text="@string/sort_manual" />
        <ImageView android:id="@+id/iv_check" android:layout_width="20dp" android:layout_height="20dp"
            android:src="@drawable/ic_check" app:tint="@color/gold_primary" android:visibility="invisible" />
    </LinearLayout>
</LinearLayout>
